src/test/compile-fail/bad-underscore.rs
fn one(f: fn(int)) {}
fn two(f: fn(int, int)) {}

fn main() {
    let x = _;  //! ERROR `_` can only appear as part of
}